Fix overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,4 @@
 body {
-  scrollbar-width: thin;
   background-color: #222;
   color: white;
   height: 100vh;
@@ -18,6 +17,8 @@ body {
     }
     .body {
       grid-area: 1 / 2 / 2 / 3;
+      max-height: calc(100vh - 22px);
+      overflow-y: scroll;
     }
     .side {
       grid-area: 1 / 1 / 2 / 2;
@@ -37,4 +38,7 @@ body {
       justify-content: flex-end;
     }
   }
+}
+div {
+  scrollbar-width: thin;
 }
